--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
 
         <div class="mini_bio">
-            <img class="foto" src="./pratica-curriculo/euu.jpg"/ alt="Desenho garota pele negra"> 
+            <img class="foto" src="./euu.jpg"/ alt="Desenho garota pele negra"> 
             <h1>Isabelle Almeida</h1>
             <h3>Olinda</h3>
             <h3>Disponibilidade para viagens e mudanças</h3>
